style(Chat, Timer): fix chat button position and timer text alignment for Arabic UI

--- a/src/components/XOGame/MultiPlayerUI/Chat/ChatHeader/ChatHeader.module.scss
+++ b/src/components/XOGame/MultiPlayerUI/Chat/ChatHeader/ChatHeader.module.scss
@@ -58,7 +58,7 @@
 
   html[lang=ar] .chatHeader.open {
     left: auto;
-    right: 0;
+    right: calc(100% - 46px);
   }
 }
 
@@ -105,6 +105,11 @@
     bottom: 10px;
     right: 10px;
     scale: .9;
+  }
+
+  html[lang=ar] .wrapper .notificationBadge {
+    right: auto;
+    left: 10px;
   }
 }
 
